# writer-brianer

./: Amily2_Memory_萝莉妈妈与御姐妹妹 (1).json  README.md  TIANGANG_FIX_VERIFICATION.md  index.js  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  prompt_template_example.json  style.css  style.css.backup-20260203-233306  test-table-removal.js
.backups/: README.md  character_manager.js.backup  memory_source.json.backup  ui_logic.bak.js
.claude/: settings.local.json
PEDSA-Web/: Cargo.toml  PEDSA.md
PEDSA-Web/src/: embedding.rs  lib.rs  storage.rs  storage_bridge.rs
PEDSA-Web/web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
PEDSA-Web/web-ui/src/: App.vue
PEDSA-Web/web-ui/src/components/: GraphView.vue  PersonaManager.vue
PEDSA-Web/web-ui/src/services/: llm.ts  sqlite.ts
PEDSA-Web/web-ui/src/workers/: sqlite.worker.ts
docs/: CHANGELOG_2026-02-05.md  COMPLETE_FIX_REPORT.md  DATA_TRANSMISSION_OPTIMIZATION.md  DEPLOYMENT_CHECKLIST.md  FILE_ORGANIZATION.md  FILE_STRUCTURE.md  FINAL_TEST_REPORT.md  HOTFIX_2026-02-05.md  IMPROVEMENTS.md  MEMORY_HIGH_PRIORITY_OPTIMIZATION.md  MEMORY_MEDIUM_PRIORITY_OPTIMIZATION.md  OPTIMIZATION_2026-02-05_SUMMARY.md  OPTIMIZATION_COMPLETE.md  PERSISTENT_STORAGE.md  PROGRESS_CANCEL_OPTIMIZATION.md  README.md  README_OPTIMIZATION.md  RESPONSE_OPTIMIZER_FIX_SUMMARY.md  RESPONSE_OPTIMIZER_IMPROVEMENTS.md  RESPONSE_OPTIMIZER_INDEX.md  RESPONSE_OPTIMIZER_QUICK_REFERENCE.md  RESPONSE_OPTIMIZER_VERIFICATION.md  TIANGANG_STORAGE_ANALYSIS.md  VERIFICATION_CHECKLIST.md  diagnostic.js
(+77 files in other folders)
